crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__pattern_match_bindings_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/pattern_match_bindings.rs",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        3
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        7
      ]
    },
    {
      "line_number": 9,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        8
      ]
    },
    {
      "line_number": 13,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        12
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        13
      ]
    },
    {
      "line_number": 15,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.29411764705882354,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        13,
        12
      ]
    }
  ],
  "overall_complexity_score": 21.264705882352942
}
