crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__struct_field_access_dependency_ir.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: ir_snapshot_content
---
Source Code:
struct Point { x: i32, y: i32 }
fn main() {
    let p = Point { x: 1, y: 2 };
    let val = p.x;
}

AST:
(source_file
  (struct_item
    name: (type_identifier "Point")
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier "x")
        type: (primitive_type "i32")
      )
      (field_declaration
        name: (field_identifier "y")
        type: (primitive_type "i32")
      )
    )
  )
  (function_item
    name: (identifier "main")
    parameters: (parameters)
    body: (block
      (let_declaration
        pattern: (identifier "p")
        value: (struct_expression
          name: (type_identifier "Point")
          body: (field_initializer_list
            (field_initializer
              field: (field_identifier "x")
              value: (integer_literal "1")
            )
            (field_initializer
              field: (field_identifier "y")
              value: (integer_literal "2")
            )
          )
        )
      )
      (let_declaration
        pattern: (identifier "val")
        value: (field_expression
          value: (identifier "p")
          field: (field_identifier "x")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/integration/language/rust/fixtures/struct_field_access_dependency.rs",
    definitions: [
        Definition { position: { 1:8 to 1:13 }, name: "Point", definition_type: StructDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:16 to 1:17 }, name: "x", definition_type: StructFieldDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:24 to 1:25 }, name: "y", definition_type: StructFieldDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 2:4 to 2:8 }, name: "main", definition_type: FunctionDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 3:9 to 3:10 }, name: "p", definition_type: VariableDefinition, scope_id: Some(3), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 4:9 to 4:12 }, name: "val", definition_type: VariableDefinition, scope_id: Some(3), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [
        Dependency { source_line: 3, target_line: 1, symbol: "Point", dependency_type: TypeReference, context: Some("TypeIdentifier:3:13") },
        Dependency { source_line: 3, target_line: 1, symbol: "x", dependency_type: StructFieldAccess, context: Some("FieldInitializer:3:21") },
        Dependency { source_line: 3, target_line: 1, symbol: "y", dependency_type: StructFieldAccess, context: Some("FieldInitializer:3:27") },
        Dependency { source_line: 4, target_line: 1, symbol: "x", dependency_type: StructFieldAccess, context: Some("FieldExpression:4:15") },
        Dependency { source_line: 4, target_line: 3, symbol: "p", dependency_type: VariableUse, context: Some("Identifier:4:15") },
    ],
    usage: [
        Usage { position: { 3:13 to 3:33 }, name: "Point { x: 1, y: 2 }", kind: StructExpression, context: None },
        Usage { position: { 3:13 to 3:18 }, name: "Point", kind: TypeIdentifier, context: None },
        Usage { position: { 3:21 to 3:22 }, name: "x", kind: FieldInitializer, context: Some("field_initializer") },
        Usage { position: { 3:27 to 3:28 }, name: "y", kind: FieldInitializer, context: Some("field_initializer") },
        Usage { position: { 4:15 to 4:18 }, name: "x", kind: FieldExpression, context: Some("field_expression") },
        Usage { position: { 4:15 to 4:16 }, name: "p", kind: Identifier, context: Some("field_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 5,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
