crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__struct_field_access_dependency_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/struct_field_access_dependency.rs",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 3,
      "dependency_distance_cost": 1.2000000000000002,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1,
        1,
        1
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.8,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        3,
        1
      ]
    }
  ],
  "overall_complexity_score": 8.8
}
