crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__use_statements_dependency_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/use_statements_dependency.rs",
  "line_metrics": [
    {
      "line_number": 7,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.6470588235294118,
      "depth": 1,
      "transitive_dependencies": 2,
      "dependent_lines": [
        2,
        1
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 3,
      "dependency_distance_cost": 0.9411764705882353,
      "depth": 1,
      "transitive_dependencies": 3,
      "dependent_lines": [
        4,
        3,
        1
      ]
    },
    {
      "line_number": 9,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.47058823529411764,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 10,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.5294117647058824,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 13,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.35294117647058826,
      "depth": 2,
      "transitive_dependencies": 3,
      "dependent_lines": [
        7
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.35294117647058826,
      "depth": 2,
      "transitive_dependencies": 4,
      "dependent_lines": [
        8
      ]
    },
    {
      "line_number": 15,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.4117647058823529,
      "depth": 2,
      "transitive_dependencies": 4,
      "dependent_lines": [
        8
      ]
    },
    {
      "line_number": 16,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.35294117647058826,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        10
      ]
    }
  ],
  "overall_complexity_score": 27.405882352941177
}
